--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,12 @@ name: Deploy to VPS
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+    paths:
+      - '**'
+      - '!**.md'
+      - '!.gitignore'
   workflow_dispatch:
 
 jobs:
@@ -12,6 +17,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v4
