--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
+
+      - name: Build Go binary
+        run: GOOS=linux GOARCH=amd64 go build -o summarify main.go
+
       - name: Set up SSH
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -26,10 +34,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "$VPS_HOST" >> ~/.ssh/known_hosts
 
-      - name: Log current commit hash
-        run: git rev-parse HEAD > deploy_hash.txt
-
-      - name: Rsync project to VPS (with .git)
+      - name: Deploy to VPS (with .git + binary)
         env:
           VPS_HOST: ${{ secrets.VPS_HOST }}
           SSH_USER: ${{ secrets.SSH_USER }}
@@ -38,7 +43,7 @@ jobs:
           rsync -avz --delete \
             --exclude='.github' \
             --exclude='.env' \
-            . deploy_hash.txt \
+            . \
             "$SSH_USER@$VPS_HOST:$DEPLOY_PATH"
 
       - name: Restart service on VPS
@@ -49,8 +54,7 @@ jobs:
         run: |
           ssh "$SSH_USER@$VPS_HOST" "
             cd $DEPLOY_PATH && \
-            chmod +x yt-dlp && \
+            chmod +x summarify && \
             systemctl restart summarify || \
-            pm2 restart summarify || \
-            echo 'Manual restart required'
+            echo 'Restart failed'
           "
